--- a/MC3_Culinary/Base.lproj/Main.storyboard
+++ b/MC3_Culinary/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="favorite" id="RJY-Jb-4og">
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" image="favorite" adjustsImageSizeForAccessibilityContentSizeCategory="YES" id="RJY-Jb-4og">
                                                     <rect key="frame" x="20" y="24" width="30" height="30"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </imageView>
@@ -701,7 +701,12 @@
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="qpu-4t-quf">
                         <barButtonItem key="backBarButtonItem" title="Back" id="ma6-RT-jR6"/>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="bookmarks" id="8If-1q-zea"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="Combined Shape" style="plain" id="8If-1q-zea">
+                            <color key="tintColor" red="0.96470588239999999" green="0.55294117649999996" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addBookmark:" destination="dnx-XJ-QpJ" id="VLe-ID-CjF"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="factDetail" destination="hn4-dt-QzE" id="OM3-6n-9gj"/>
@@ -720,6 +725,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Combined Shape" width="25" height="25"/>
         <image name="DiscoverTabBarDisable" width="25" height="25"/>
         <image name="favorite" width="30" height="30"/>
     </resources>
